symbol table alignment fix

--- a/client/static/style.css
+++ b/client/static/style.css
@@ -35,7 +35,7 @@
 }
 
 ::-webkit-scrollbar {
-    display: none;
+    display: none;;
 }
 
 ::selection {
@@ -64,11 +64,11 @@ header {
 .nav-ul {
     font-family:  "EB Garamond", serif;
     background-color: var(--my-blue);
-    height: 1rem;
+    height: 1.5rem;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    list-style: none;
+    list-style: none;;
     padding: 0;
     margin: 0;
     border:2px solid var(--my-blue);
@@ -81,8 +81,8 @@ header {
     height: 100%;
     color: var(--my-black);
     font-weight: bold;
-    padding-right: 0.75rem;
-    font-size: 0.75rem;
+    padding-right: 1.125rem;
+    font-size: 1.125rem;
 }
 
 .nav-ul li {
@@ -92,9 +92,9 @@ header {
 
 .nav-option {
     background-color: var(--my-light-gray);
-    padding-right: 0.75rem;
-    padding-left: 0.75rem;
-    font-size: 0.75rem;
+    padding-right: 1.125rem;
+    padding-left: 1.125rem;
+    font-size: 1.125rem;
 }
 
 .exoe-logo {
@@ -111,7 +111,7 @@ header {
 #app-container {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 1fr 1.35rem;
+    grid-template-rows: 1fr 2.025rem;
     grid-column-gap:0;
     grid-row-gap:0;
     width:100%;
@@ -123,7 +123,7 @@ header {
 }
 #app-pane-right {
     background-color: var(--my-light-white);
-    border-left: none;
+    border-left: none;;
     grid-area: 1/2/2/3;
 }
 #app-pane-left {
@@ -144,18 +144,19 @@ header {
     overflow: scroll;
     margin:0;
     box-sizing: border-box;
-    padding:0.75rem;
-    border: none;
+    padding:1.125rem;
+    border: none;;
     min-width: 100%;
     height: 100%;
     background-color: var(--my-dark-gray);
     font-family: 'Source Code Pro', monospace;
+    font-size: 1.25rem;
     color: var(--my-white);
 }
 
 
 textarea:focus {
-    outline: none;
+    outline: none;;
     caret-color: var(--my-white);
 }
 
@@ -163,7 +164,8 @@ textarea:focus {
     overflow: scroll;
     background-color: var(--my-light-white);
     color: var(--my-black);
-    padding: 0.75rem;
+    padding: 1.125rem;
+    font-size: 1.5rem;
     min-width:50%;
 }
 
@@ -180,9 +182,9 @@ textarea:focus {
 }
 #toolbar-editor > button {
     background-color: var(--my-black);
-    border: none;
+    border: none;;
     color: var(--my-white);
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 #toolbar-editor > button:hover{
     background-color: var(--my-green);
@@ -199,7 +201,7 @@ textarea:focus {
     display: flex; flex-direction: row; align-items: center;
     justify-content: center;
 }
-.hidden { display: none; }
+.hidden { display: none;; }
 
 /* MODAL COMPONENTS */
 .modal-symbol-ctr {
@@ -208,7 +210,7 @@ textarea:focus {
     margin: 0;
     padding: 0;
     background-color: var(--my-white);
-    border: 0.3rem solid var(--my-blue);
+    border: 0.45rem solid var(--my-blue);
     min-width: 60%;
     max-width:60%;
     max-height: 50%;
@@ -241,7 +243,7 @@ textarea:focus {
 }
 
 #search-input:focus {
-    outline: none;
+    outline: none;;
 }
 
 #table-headers {
@@ -254,12 +256,15 @@ textarea:focus {
     font-family: 'Source Code Pro', monospace;
 }
 
-#table-headers p {
+#table-header-sym, #table-header-ex {
     margin:0;
     border: 2px solid var(--my-black);
     width: 100%;
     display: flex; justify-content:center;
 }
+
+#table-header-sym { min-width: 30% }
+#table-header-ex { min-width: 70%; border-left: none; }
 
 #table-container {
     overflow-y: scroll;
@@ -269,10 +274,14 @@ textarea:focus {
 }
 
 #symbol-table {width: 100%;}
-#symbol-table tr {font-size: 0.55rem; background-color: var(--my-lighter-gray);}
-#symbol-table td {min-width: 50%; font-family: 'Source Code Pro', monospace;}
+#symbol-table tr {font-size: 0.825rem; background-color: var(--my-lighter-gray);}
+#symbol-table td {width: 30%; font-family: 'Source Code Pro', monospace;}
+#symbol-table td:nth-child(even) {width: 70%;}
 #symbol-table tr:nth-child(odd) {background-color: var(--my-dark-gray);}
-#symbol-table tr:hover {background-color: var(--my-green);}
+#symbol-table tr:hover {
+    background-color: var(--my-light-blue);
+    color: var(--my-white);
+}
 
 #search-preview {
     grid-area: 2/2/3/4;
@@ -284,7 +293,7 @@ textarea:focus {
     font-family: 'Source Code Pro', monospace;
     padding: 0;
     margin:0;
-    font-size: 0.4rem;
+    font-size: 0.6rem;
     color: var(--my-cyan);
 }
 
@@ -295,7 +304,7 @@ textarea:focus {
     border: 2px solid var(--my-lighter-gray);
     background-color: var(--my-white);
     color: var(--my-black);
-    font-size: 1rem;
+    font-size: 1.5rem;
     width: 70%;
     max-width: 70%;
     height: 80%;
